force-app/main/default/objects/ApprovalRecord__c/ApprovalRecord__c.object-meta.xml
<CustomObject>
    <label>Approval Record</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Approval Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>