force-app/main/default/objects/ApprovalRecord__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approval Records (Approved By)</relationshipLabel>
    <relationshipName>Approved_Approval_Records</relationshipName>
    <type>Lookup</type>
</CustomField>