force-app/main/default/objects/ApprovalRecord__c/fields/PaymentPlan__c.field-meta.xml
<CustomField>
    <fullName>PaymentPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>Approval Records</relationshipLabel>
    <relationshipName>Approval_Records</relationshipName>
    <type>Lookup</type>
</CustomField>