force-app/main/default/objects/ApprovalRecord__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approval Records (Submitted By)</relationshipLabel>
    <relationshipName>Submitted_Approval_Records</relationshipName>
    <type>Lookup</type>
</CustomField>